(library
 (name sihl_contract)
 (public_name sihl-contract)
 (libraries sihl-core sihl-type ptime ptime.clock.os caqti caqti-lwt uuidm
   opium multipart-form-data alcotest str)
 (preprocess
  (pps ppx_fields_conv ppx_deriving_yojson ppx_deriving.eq ppx_deriving.show
    ppx_deriving.make ppx_sexp_conv)))
