(library
 (name sihl_core)
 (libraries
  core
  opium
  caqti
  caqti-driver-postgresql
  caqti-lwt
  tyxml
  lwt.unix
  yojson
  ppx_deriving_yojson.runtime
  logs         ;; The logs library
  logs.fmt     ;; The logs format helper
  logs.lwt     ;; The logs concurrency helper
)
 (preprocess
  (pps
   ppx_rapper
   ppx_fields_conv
   ppx_deriving_yojson
  )))
