(library
 (name sihl)
 (public_name sihl)
 (libraries
  base
  pcre
  str
  opium
  caqti
  caqti-lwt
  tyxml
  lwt.unix
  yojson
  ppx_deriving_yojson.runtime
  logs
  logs.fmt
  logs.lwt
  safepass
  uuidm
  base64
  jwto
  letters
  alcotest
  tsort
)
 (preprocess
  (pps
   ppx_fields_conv
   ppx_deriving_yojson
   ppx_deriving.eq
   ppx_deriving.show
   ppx_deriving.make
   ppx_sexp_conv
   tyxml-jsx
  )))

(include_subdirs unqualified)

(documentation
 (package sihl)
  (mld_files index))
