(executables
 (names csrf_mariadb http session_mariadb session_postgresql flash_mariadb
   flash_postgresql user_mariadb bearer_token)
 (libraries sihl-user sihl-token sihl-web sihl-session sihl-persistence
   alcotest-lwt caqti-driver-mariadb caqti-driver-postgresql cohttp-lwt-unix)
 (preprocess
  (pps ppx_fields_conv ppx_deriving_yojson ppx_deriving.eq ppx_deriving.show
    ppx_deriving.make ppx_sexp_conv)))
