(library
 (name database)
 (public_name sihl.database)
 (libraries uuidm caqti-lwt yojson ppx_deriving_yojson.runtime sexplib core
   repository)
 (modules_without_implementation sig)
 (preprocess
  (pps ppx_deriving_yojson ppx_sexp_conv ppx_fields_conv ppx_deriving.eq
    ppx_deriving.show ppx_deriving.make)))
