(library
 (name email)
 (public_name sihl.email)
 (libraries
  base
  letters
  yojson
  ppx_deriving_yojson.runtime
  caqti
  cohttp
  cohttp-lwt-unix
  str
  core
  log
  configuration
  cmd
  utils
  data
  queue)
 (modules_without_implementation
  email_service_sig)
 (preprocess
  (pps
   ppx_deriving_yojson
   ppx_fields_conv
   ppx_deriving.eq
   ppx_deriving.show
   ppx_deriving.make)))
