(library
 (name sihl_email_core)
 (public_name sihl.email)
 (libraries logs yojson ppx_deriving_yojson.runtime str sihl_core sihl_utils
   sihl_database sihl_queue_core)
 (modules_without_implementation sig)
 (preprocess
  (pps ppx_deriving_yojson ppx_fields_conv ppx_deriving.eq ppx_deriving.show
    ppx_deriving.make)))
