(library
 (name sihl)
 (public_name sihl)
 (inline_tests)
 (libraries
  base
  pcre
  str
  opium
  caqti
  caqti-lwt
  tyxml
  lwt.unix
  yojson
  ppx_deriving_yojson.runtime
  logs
  logs.fmt
  logs.lwt
  safepass
  uuidm
  base64
)
 (preprocess
  (pps
   ppx_rapper
   ppx_fields_conv
   ppx_deriving_yojson
   ppx_deriving.eq
   ppx_deriving.show
   ppx_deriving.make
   ppx_sexp_conv
   ppx_string_interpolation
   ppx_inline_test
   tyxml-jsx
  )))
(include_subdirs unqualified)