(library
 (name message)
 (public_name sihl.message)
 (libraries
  base
  yojson
  ppx_deriving_yojson.runtime
  core
  log
  session)
 (modules_without_implementation
  message_service_sig)
 (preprocess
  (pps
   ppx_fields_conv
   ppx_deriving_yojson
   ppx_deriving.eq
   ppx_deriving.show
   ppx_deriving.make)))
