(library
 (name queue)
 (public_name sihl.queue)
 (libraries ptime ptime.clock.os yojson ppx_deriving_yojson.runtime core
   utils database schedule)
 (modules_without_implementation sig)
 (preprocess
  (pps ppx_deriving_yojson ppx_fields_conv ppx_deriving.eq ppx_deriving.show
    ppx_deriving.make)))
