(library
 (name sihl_queue_core)
 (public_name sihl.queue)
 (libraries yojson ppx_deriving_yojson.runtime
   sihl_utils sihl_database sihl_schedule)
 (modules_without_implementation sig)
 (preprocess
  (pps ppx_deriving_yojson ppx_fields_conv ppx_deriving.eq ppx_deriving.show
    ppx_deriving.make)))
