(library
 (name session)
 (public_name sihl.session)
 (libraries
  base
  yojson
  ppx_deriving_yojson.runtime
  ptime
  ptime.clock.os
  caqti
  core
  data
  utils)
 (modules_without_implementation
  session_service_sig)
 (preprocess
  (pps
   ppx_fields_conv
   ppx_deriving_yojson
   ppx_deriving.eq
   ppx_deriving.show
   ppx_deriving.make)))
