(library
 (name sihl_session)
 (public_name sihl.session)
 (libraries yojson ppx_deriving_yojson.runtime ptime ptime.clock.os
   sihl_database sihl_utils sihl_repository sihl_migration)
 (modules_without_implementation sig)
 (preprocess
  (pps ppx_fields_conv ppx_deriving_yojson ppx_deriving.eq ppx_deriving.show
    ppx_deriving.make)))
