(library
 (name sihl)
 (public_name sihl)
 (libraries sexplib fmt fmt.tty logs logs.fmt lwt lwt.unix tsort conformist
   base64 yojson ppx_deriving_yojson.runtime safepass ptime ptime.clock.os
   jwto uuidm opium caqti-lwt str)
 (preprocess
  (pps ppx_fields_conv ppx_deriving_yojson ppx_deriving.eq ppx_deriving.show
    ppx_deriving.make ppx_sexp_conv)))

(documentation
 (package sihl))
