(executables
 (names core_app core_configuration core_container core_utils
   database_migration database_mariadb database_postgresql
   database_migration_mariadb database_migration_postgresql web web_csrf
   web_http web_session web_flash web_id web_trailing_slash)
 (libraries sihl alcotest-lwt caqti-driver-mariadb caqti-driver-postgresql
   cohttp-lwt-unix lwt_ppx)
 (preprocess
  (pps ppx_fields_conv ppx_deriving_yojson ppx_deriving.eq ppx_deriving.show
    ppx_deriving.make ppx_sexp_conv lwt_ppx)))
