(library
 (name token)
 (public_name sihl.token)
 (libraries
  base
  ptime
  ptime.clock.os
  yojson
  ppx_deriving_yojson.runtime
  alcotest
  caqti
  core
  data
  utils)
 (modules_without_implementation
  token_service_sig)
 (preprocess
  (pps
   ppx_deriving_yojson
   ppx_fields_conv
   ppx_deriving.eq
   ppx_deriving.show
   ppx_deriving.make)))
