(library
 (name sihl_token)
 (public_name sihl.token)
 (libraries ptime ptime.clock.os yojson ppx_deriving_yojson.runtime alcotest
   sihl_database sihl_migration sihl_utils)
 (modules_without_implementation sig)
 (preprocess
  (pps ppx_deriving_yojson ppx_fields_conv ppx_deriving.eq ppx_deriving.show
    ppx_deriving.make)))
