(library
 (name user)
 (public_name sihl.user)
 (libraries
  base
  ptime
  ptime.clock.os
  yojson
  ppx_deriving_yojson.runtime
  alcotest
  core
  utils
  data
  token)
 (modules_without_implementation
  user_password_reset_service_sig
  user_service_sig)
 (preprocess
  (pps
   ppx_deriving_yojson
   ppx_fields_conv
   ppx_deriving.eq
   ppx_deriving.show
   ppx_deriving.make)))
