(library
 (name sihl_user)
 (public_name sihl.user)
 (libraries ptime ptime.clock.os yojson ppx_deriving_yojson.runtime alcotest
   sihl_utils sihl_database sihl_token sihl_repository
   sihl_migration)
 (modules_without_implementation sig)
 (preprocess
  (pps ppx_deriving_yojson ppx_fields_conv ppx_deriving.eq ppx_deriving.show
    ppx_deriving.make)))
