(library
 (name utils)
 (public_name sihl.utils)
 (libraries re yojson ppx_deriving_yojson.runtime safepass base64 ptime jwto
   core)
 (modules_without_implementation utils_random_service_sig)
 (preprocess
  (pps ppx_deriving_yojson ppx_fields_conv ppx_deriving.eq ppx_deriving.show
    ppx_deriving.make)))
