(library
 (name sihl_core)
 (libraries
  base
  str
  opium
  caqti
  caqti-driver-postgresql
  caqti-lwt
  tyxml
  lwt.unix
  yojson
  ppx_deriving_yojson.runtime
  logs
  logs.fmt
  logs.lwt
  safepass
)
 (preprocess
  (pps
   ppx_rapper
   ppx_fields_conv
   ppx_deriving_yojson
   ppx_string_interpolation
  )))
