(library
 (name sihl_core)
 (libraries
  base
  pcre
  str
  opium
  caqti
  caqti-lwt
  caqti-driver-postgresql
  caqti-driver-mariadb
  tyxml
  lwt.unix
  yojson
  ppx_deriving_yojson.runtime
  logs
  logs.fmt
  logs.lwt
  safepass
  uuidm
)
 (preprocess
  (pps
   ppx_rapper
   ppx_fields_conv
   ppx_deriving_yojson
   ppx_string_interpolation
  )))
