(library
 (name sihl_users)
 (libraries
  sihl_core
  core
  opium
  caqti
  caqti-driver-postgresql
  caqti-lwt
  lwt.unix
  ppx_fields_conv
  yojson
  ppx_deriving_yojson.runtime
  sexplib
  logs         ;; The logs library
  logs.fmt     ;; The logs format helper
  logs.lwt     ;; The logs concurrency helper
  uuidm
  )
 (preprocess
 (pps ppx_rapper ppx_fields_conv ppx_deriving_yojson ppx_sexp_conv)))
