(lang dune 2.0)

(name {{ project_slug }})

(documentation "https://{{ github_username }}.github.io/{{ project_slug }}/")

(source
 (github {{ github_username }}/{{ project_slug }}))

(license MIT)

(authors
  "{{ username }}{% if author_email %} <{{ author_email }}>{% endif %}")

(maintainers
  "{{ username }}{% if author_email %} <{{ author_email }}>{% endif %}")

(generate_opam_files true)

(package
 (name {{ project_slug }})
 (synopsis "{{ project_description }}")
 (description "\
{{ project_description }}
")
 (depends
  (ocaml (>= 4.08.0))
  dune
  (sihl (>= 0.3.0))
  (tyxml-ppx (>= 4.4.0))
  {%- if database == 'PostgreSql' %}
  (caqti-driver-postgresql
   (>= 1.2.1))
  {%- endif %}
  {%- if database == 'MariaDb' %}
  (caqti-driver-mariadb
   (>= 1.2.1))
  {%- endif %}
  (alcotest-lwt :with-test)
  (odoc :with-doc)))
